core/ingress/argocd-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`deploy.luigi99.cloud`)
      kind: Rule
      services:
        - name: argocd-server
          port: 443
          scheme: https
  tls:
    certResolver: letsencrypt
